--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>📍 Location-Based Predictions</li>
             <li>📊 Interactive Weather Maps</li>
         </ul>
-        <a href="/dashboard.html" class="get-started-btn">Get Started</a>
+        <a href="dashboard.html" class="get-started-btn">Get Started</a>
     </div>
     
 
