--- a/airquality.html
+++ b/airquality.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Quality & Temperature</title>
-    <link rel="stylesheet" href="/airquality.css">
-    <script src="/airquality.js" defer></script>
+    <link rel="stylesheet" href="airquality.css">
+    <script src="airquality.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="nav-logo">STRIVERS</div>
         <ul class="nav-links">
-            <li><a href="#">Air Quality</a></li>
+            <li><a href="airquality.html">Air Quality</a></li>
             <li><a href="#">Water Quality</a></li>
             <li><a href="weather.html">Weather</a></li>
         </ul>
