--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li>📍 Location-Based Predictions</li>
             <li>📊 Interactive Weather Maps</li>
         </ul>
-        <a href="/weather.html" class="get-started-btn">Get Started</a>
+        <a href="weather.html" class="get-started-btn">Get Started</a>
     </div>
     
 
