--- a/weather.html
+++ b/weather.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="/weather.css">
+    <link rel="stylesheet" href="weather.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-logo">STRIVERS</div>
         <ul class="nav-links">
-            <li><a href="/airquality.html">Air Quality</a></li>
+            <li><a href="airquality.html">Air Quality</a></li>
             <li><a href="#">Water Quality</a></li>
             <li><a href="weather.html">Weather</a></li>
         </ul>
@@ -47,7 +47,7 @@
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="/weather.js"></script>
+    <script src="weather.js"></script>
 
 </body>
 </html>
