--- a/weather.html
+++ b/weather.html
@@ -13,7 +13,7 @@
         <div class="nav-logo">STRIVERS</div>
         <ul class="nav-links">
             <li><a href="airquality.html">Air Quality</a></li>
-            <li><a href="#">pollution</a></li>
+            <li><a href="#">Pollution</a></li>
             <li><a href="weather.html">Weather</a></li>
         </ul>
         <div class="search-container">
