--- a/airquality.html
+++ b/airquality.html
@@ -18,6 +18,7 @@
             <li><a href="airquality.html">Air Quality</a></li>
             <li><a href="#">pollution</a></li>
             <li><a href="weather.html">Weather</a></li>
+            <li><a href="aleart.html">Weather</a></li>
         </ul>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Enter city name">
