--- a/airquality.html
+++ b/airquality.html
@@ -16,9 +16,9 @@
         <div class="nav-logo">STRIVERS</div>
         <ul class="nav-links">
             <li><a href="airquality.html">Air Quality</a></li>
-            <li><a href="#">pollution</a></li>
+            <li><a href="#">Pollution</a></li>
             <li><a href="weather.html">Weather</a></li>
-            <li><a href="aleart.html">Weather</a></li>
+            <li><a href="aleart.html">Alerts</a></li>
         </ul>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Enter city name">
