--- a/weather.html
+++ b/weather.html
@@ -15,7 +15,7 @@
             <li><a href="airquality.html">Air Quality</a></li>
             <li><a href="#">Pollution</a></li>
             <li><a href="weather.html">Weather</a></li>
-            <li><a href="aleart.html">Aleart</a></li>
+            <li><a href="aleart.html">Alerts</a></li>
         </ul>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Enter city name">
